--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "animate.css": "^4.1.1",
     "better-sqlite3": "^9.3.0",
     "next": "^14.0.3",
     "react": "^18.2.0",
