--- a/package.json
+++ b/package.json
@@ -14,9 +14,10 @@
     "next": "^14.0.3",
     "react": "^18.2.0",
     "react-dom": "^18",
+    "react-icons": "^5.0.1",
+    "sharp": "^0.33.3",
     "slugify": "^1.6.6",
-    "xss": "^1.0.14",
-    "react-icons": "^5.0.1"
+    "xss": "^1.0.14"
   },
   "devDependencies": {
     "@babel/core": "^7.24.3",
